Breaking longer paragraphs for easier readability
Breaking longer paragraphs into shorter ones to improve readability and ensure that the content is easier to follow. This approach:
• Enhances visual structure on the page
• Ensures that important information doesn't get lost in long lines.

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <title>Emily Rewritten | Get in Contact</title>
+  <link rel="stylesheet" href="css/mystyle.css">
 </head>
     <body>
+          <!--Navigation Bar-->
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="newsroom.html">Newsroom</a>
@@ -33,6 +35,7 @@
     </section>
 <hr>
   <footer>
+    <!--Footer Section-->
     <section>
       <h3>Join Our Community</h3>
       <p>
@@ -49,7 +52,8 @@
       </ul>
     </section>
 
-    <p><small>© 2025 The Emily Rewritten Project. Affiliated with Christianity. All intellectual property rights reserved. No reproduction without permission.</small></p>
+    <p><small>© 2025 The Emily Rewritten Project. Affiliated with Christianity. All intellectual property rights 
+      reserved. No reproduction without permission.</small></p>
  </footer>
 
     </body>
