--- a/newsroom.html
+++ b/newsroom.html
@@ -2,8 +2,10 @@
 <html> 
     <head> 
         <title>Emily Rewritten | Newsroom</title>
+        <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
+          <!--Navigation Bar-->
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="newsroom.html">Newsroom</a>
@@ -31,12 +33,14 @@
         <li>
           <strong>31st January | Live Event</strong><br>
           <h5>Dwelling in the Unknown.</h5>
-          <p>The tricky, sticky, intriguing nature of the unknown has been there from the very beginning. That is why were offering an event where we can dive right into the heart of the matter.</p>
+          <p>The tricky, sticky, intriguing nature of the unknown has been there from the very beginning. That is 
+            why were offering an event where we can dive right into the heart of the matter.</p>
         </li>
       </ul>
       <hr>
                        
    <footer>
+  <!--Footer Section-->
     <section>
       <h3>Join Our Community</h3>
       <p>
