--- a/programs.html
+++ b/programs.html
@@ -2,8 +2,10 @@
 <html> 
     <head> 
         <title>Emily Rewritten | Programs</title>
+        <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
+          <!--Navigation Bar-->
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="newsroom.html">Newsroom</a>
@@ -34,6 +36,7 @@
       <hr>
         
  <footer>
+  <!--Footer Section-->
     <section>
       <h3>Join Our Community</h3>
       <p>
