--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html> 
     <head> 
         <title>Emily Rewritten | Home</title>
+        <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
+          <!--Navigation Bar-->
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="newsroom.html">Events</a>
@@ -18,17 +20,21 @@
 
              <h3> Rewrite your story, Reclaim your power.</h3>
               <p><h4> Stories have the power to transform.</h4>
-                 Emily Rewritten project is about love, Faith, and Forgiveness, by providing opportunities and resources for youth to heal, adapt and lead with purpose.
-              </p>
+                 Emily Rewritten project is about love, Faith, and Forgiveness, by providing opportunities and 
+                 resources for youth to heal, adapt and lead with purpose.</p>
               <p>
                 <hr>
-                <b>Become a Supporter</b></p>
-               <p>The Emily rewritten project is here today thanks to all our incredible supporters who believe in the transformative power of real-life stories. Become a supporter today to help provide a vital lifeline for our long-term stability and growth.</p>
+                <b>Become a Supporter</b>
+              </p>
+               <p>The Emily rewritten project is here today thanks to all our incredible supporters who believe in 
+                the transformative power of real-life stories. Become a supporter today to help provide a vital 
+                lifeline for our long-term stability and growth.</p>
              <button type= "button">Join Us</button>
                 <button type="button">Donate</button>
                 <button type="button">Share your Story</button>
         <hr>
   <footer>
+    <!--Footer Section-->
     <section>
       <h3>Join Our Community</h3>
       <p>
