--- a/stories.html
+++ b/stories.html
@@ -2,8 +2,10 @@
 <html> 
     <head> 
         <title>Emily Rewritten | Stories</title>
+        <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
+          <!--Navigation Bar-->
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="newsroom.html">Newsroom</a>
@@ -12,15 +14,20 @@
             <a href="contact.html">Contact Us</a>
             
             <h1><b>Who is Emily Rewritten</b></h1> 
-            <p>Emily is a symbolic figure representing every young woman who has faced trauma but found strength to rewrite her story. The name comes from the founder’s first published book “Emily rewritten”, which sparked the movement. -It’s about resilience, healing, and authorship</p>
+            <p>Emily is a symbolic figure representing every young woman who has faced trauma but found strength 
+              to rewrite her story. The name comes from the founder’s first published book “Emily rewritten”, which
+               sparked the movement. -It’s about resilience, healing, and authorship</p>
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard1.jpg" width="200" >
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard2.jpg" width="200" >
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard3.jpg" width="200" >
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard4.jpg" width="200" >
             <h3><b>Submit Your Story</b></h3>
 <hr>
-            <p>We believe in the power of storytelling to heal and transform lives. If you have a story of resilience, hope, or transformation that you would like to share, we would love to hear from you. Your story can inspire others and contribute to our mission of empowering youth to reclaim their narratives.</p>
-            <p>Please ensure that your story is original and that you have the right to share it. We respect your privacy and will handle your submission with care.</p>
+            <p>We believe in the power of storytelling to heal and transform lives. If you have a story of resilience,
+               hope, or transformation that you would like to share, we would love to hear from you. Your story can
+                inspire others and contribute to our mission of empowering youth to reclaim their narratives.</p>
+            <p>Please ensure that your story is original and that you have the right to share it. We respect your 
+              privacy and will handle your submission with care.</p>
             <form>
                 <label for="name">Your Name</label><br>
                 <input type="text" id="name" name="name" required><br>
@@ -35,6 +42,7 @@
             </form>
             <hr>
          <footer>
+          <!--Footer Section-->
     <section>
       <h3>Join Our Community</h3>
       <p>
@@ -51,7 +59,8 @@
       </ul>
     </section>
 
-    <p><small>© 2025 The Emily Rewritten Project. Affiliated with Christianity. All intellectual property rights reserved. No reproduction without permission.</small></p>
+    <p><small>© 2025 The Emily Rewritten Project. Affiliated with Christianity. All intellectual property rights 
+      reserved. No reproduction without permission.</small></p>
                 
         </body>
 </html>
