--- a/newsroom.html
+++ b/newsroom.html
@@ -5,13 +5,18 @@
         <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
-          <!--Navigation Bar-->
+            <!--Navigation Bar-->
+        <nav>
+           <img src="C:\Users\IT\Downloads\Emilyrewritten\images\logo.png" width="200" height="200" alt="Emily Rewritten Logo">
+           <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="newsroom.html">Newsroom</a>
+            <a href="about.html">About Us</a>
+            <a href="newsroom.html">Events</a>
             <a href="programs.html">Programs</a>
             <a href="stories.html">stories</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
+           </div>
+        </nav>
             
             <h2>EVENTS</h2>
 
