--- a/stories.html
+++ b/stories.html
@@ -5,18 +5,25 @@
         <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
-          <!--Navigation Bar-->
+            <!--Navigation Bar-->
+        <nav>
+           <img src="C:\Users\IT\Downloads\Emilyrewritten\images\logo.png" width="200" height="200" alt="Emily Rewritten Logo">
+           <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
-            <a href="newsroom.html">Newsroom</a>
+            <a href="newsroom.html">Events</a>
             <a href="programs.html">Programs</a>
             <a href="stories.html">stories</a>
             <a href="contact.html">Contact Us</a>
+           </div>
+        </nav>
             
             <h1><b>Who is Emily Rewritten</b></h1> 
             <p>Emily is a symbolic figure representing every young woman who has faced trauma but found strength 
               to rewrite her story. The name comes from the founder’s first published book “Emily rewritten”, which
                sparked the movement. -It’s about resilience, healing, and authorship</p>
+            <p class="quote">“This is where I rewrote my life.”</p>
+
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard1.jpg" width="200" >
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard2.jpg" width="200" >
             <img src="C:\Users\IT\Downloads\Emilyrewritten\images\storycard3.jpg" width="200" >
