--- a/about.html
+++ b/about.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html> 
     <head> 
+      <link rel="stylesheet" href="css/mystyle.css">
         <title>Emily Rewritten | About Us</title>
-        <link rel="stylesheet" href="css/mystyle.css">
     </head>
         <body>
-          <!--Navigation Bar-->
+            <!--Navigation Bar-->
+        <nav>
+           <img src="C:\Users\IT\Downloads\Emilyrewritten\images\logo.png" width="200" height="200" alt="Emily Rewritten Logo">
+           <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
-            <a href="newsroom.html">Newsroom</a>
+            <a href="newsroom.html">Events</a>
             <a href="programs.html">Programs</a>
             <a href="stories.html">stories</a>
             <a href="contact.html">Contact Us</a>
+           </div>
+        </nav>
             
             <h2><b>Who is Emily Rewritten</b></h2> 
              <p>Emily is a symbolic figure representing every young woman who has faced trauma but found strength 
