enhanced about page using css
For this page, I incorporated various features such as cards, dynamic elements, and additional content to enhance the overall design and functionality. The cards were used to display information in a visually structured and organised manner, making it easy for users to navigate.  Including features like hover effects, animations, and dropdowns. Based on feedback from my previous submission, I also added more detailed and relevant content, ensuring the layout is both informative and visually appealing. These enhancements not only improve usability but also demonstrate an understanding of modern design principles and interactivity.

--- a/newsroom.html
+++ b/newsroom.html
@@ -18,10 +18,11 @@
            </div>
         </nav>
             
-            <h2>EVENTS</h2>
-
-        <p>Please check back later to learn about our upcoming event dates in Q4 2025 and early 2026.</p>
-      
+        <!--The Hero Section-->
+          <header class="hero">
+            <h1> Our <span>Events</span></h1> 
+            <p class="quote" style="text-align: center;">"Learn about our upcoming event dates."</p>
+          </header>
 
       <h3>Upcoming Events | 2025 and 2026</h3>
       <ul>
