--- a/stories.html
+++ b/stories.html
@@ -17,8 +17,12 @@
             <a href="contact.html">Contact Us</a>
            </div>
         </nav>
+             <!--The Hero Section-->
+          <header class="hero">
+            <h1> Stories of <span>Emily</span></h1> 
+            <p class="quote" style="text-align: center;">"Called to strive for righteousness.</p>
+            </header>
             
-            <h1><b>Who is Emily Rewritten</b></h1> 
             <p>Emily is a symbolic figure representing every young woman who has faced trauma but found strength 
               to rewrite her story. The name comes from the founder’s first published book “Emily rewritten”, which
                sparked the movement. -It’s about resilience, healing, and authorship</p>
